# adaptive-tests

./: .gitignore  .markdownlinkcheck.json  .markdownlintignore  .test-discovery-cache 2.json  AGENTS.md  AST_PARSING_COMPLETE.md  ASYNC_CONSISTENCY_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  MIGRATION_NOTES.md  PACKAGE_F_STATUS.md  PROMPT_GUIDE.md  PROOF.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  WOLFRAM_INTEGRATION.md  WOLFRAM_PARITY_SUMMARY.md  action.yml  adaptive-tests.code-workspace  adaptive-tests.config.js  adaptive-tests.enhanced.config.js  benchmark.js  codecov.yml  examples  fix-javascript-imports.js  issues-deep.md  jest.examples.config.cjs  package-lock.json  package.json  refactor-ts.js  refactor.js  requirements.txt  restore-broken.js  restore-ts.js  (+10 more)
.github/: DEVELOPMENT.md  FUNDING.yml  dependabot.yml  pull_request_template.md
benchmarks/: README.md
docs/: API_REFERENCE.md  AUTOMATED_PUBLISHING.md  BEST_PRACTICES.md  CI_STRATEGY.md  COMMON_ISSUES.md  EXPRESS_QUICKSTART.md  GITHUB_ACTION.md  HOW_IT_WORKS.md  INTERNAL_EXECUTION_PLAN.md  JAVA_QUICKSTART.md  MASSIVE_REFACTOR_PLAN.md  MIGRATION_GUIDE.md  PHP_QUICKSTART.md  QUICK_START.md  REACT_QUICKSTART.md  RELEASE_CHECKLIST.md  START-HERE.md  TROUBLESHOOTING.md  VUE_QUICKSTART.md  _config.yml  advanced-patterns.md  ai-prompts.md  getting-started-invisible.md  index.md
examples/: README.md
scripts/: build-packages.js  check-binaries.js  (+9 more)
src/adaptive/rust/: Cargo.toml  rust-discovery-collector.js  rust-discovery-integration.js
(+528 files in other folders)
